Fixed a couple links and changed spacing

--- a/static/bootstrap/css/custom.css
+++ b/static/bootstrap/css/custom.css
@@ -20,7 +20,7 @@
 
 
 #promo-text {
-  margin-top: 5%;
+  margin-top: 8%;
 }
 
 .promo .container-fluid .jumbotron {
